@@ -6,7 +6,8 @@ On the road for v0.4.6 (Nausicaa2)
 ===============================================================================
 
 2007-02-18  Gilles Dumortier <dgil at ieee.org>
-	* view portfolio selection : sort by name (SF bug 1562293)
+	* Quotes selection : sort by name (SF bug 1562293)
+	* Portfolios selection : sort by name (SF bug 1562293)
 	* Operation Edit: sort operation type + better display
 	* Operation View: filter by year not displayed (SF bug 1626233)
 	* Portfolio : edit the default VAT (SF bug 1474568)
